0.7.2 [2012-07- in progress]
Added "Mark all" and "Mark none" buttons to the satellites import window.
Added a search/filter feature to the main satellites list.
Fixed duplicate name confusion on double-clicking a satellite in the list.

0.7.1 [2012-01-08]
Added basic GUI for adding satellites from TLE lists.
Added CelesTrak's tle-new.txt to the default sources list to make adding fresh
satellites easier.
UPDATE THIS! (There have been multiple changes between this date and the time
Stellarium 0.10.3 was released with the same plug-in version number.)

0.7.0 [2011-12-13]
Use catalog number instead of satellite name as an identifier.
Save dates as proper JSON strings (before they broke stricter parsers).
Display the catalog number and the International Designator in the info field.

0.6.4 [2010-11-18]
Add ability to update TLE data from files.
Better docuentation in the About tab.

0.6.3 [2010-11-16]
Update status message show how many satellites got new elements.
Update status message includes how many were missing in update URLs.
Add lastUpdate date to the JSON data.

0.6.2 [2010-11-16]
Refactored json load/save.
Made per-satellite display/orbit flags persistent (save button now works).
Bugfixes.

0.6.1 [2010-11-15]
Added global orbit lines on/off.
Added saving of settings.
Parameterized orbit line rendering.
Added old satellites.json version detection.

0.6.0 [2010-11-10]
Re-implementation of orbital calculations added by Jose Luis Canales.
Addition of orbit line rendering.

0.5.3 [2010-03-31]
Added custom style sheets.

0.5.2 [2010-01-12]

Fix sub-pixel dialog position.
Make visible checkbox work properly.
Mask incomplete features in preparation for release.
Updated default satellites.json file.

0.5.0 [2009-10-03]

Added GUI config for general update/display options, satellite groups/lists, sources, about.
Removed translation to fix win32 build :(
Fixed win32 installer generator.

0.4.0 [2009-09-12]

Changed getPluginInfo to work with modified core.